Update and rename our-world-in-data.ipynb to COPD-Death-Rate.ipynb

--- a/COPD-Death-Rate.ipynb
+++ b/COPD-Death-Rate.ipynb
@@ -14,9 +14,7 @@
     "tags": []
    },
    "source": [
-    "This is a notebook concerning the exercise for Junior Data Scientist at Our World In Data. \n",
-    "\n",
-    "I've been asked to calculate the crude and age-standardised death rate for chronic obstructive pulmonary disease (COPD) in both the United States and Uganda in 2019.\n",
+    "This is a notebook concerning the crude and age-standardised death rate for chronic obstructive pulmonary disease (COPD) in both the United States and Uganda in 2019.\n",
     "\n",
     "In this calculation, I've used the population from July 2019, as to best represent the average population of each country in 2019, rather than taking the population in January 2019 or 2020. For age-standardisation, I've used the WHO World Standard, as outlined in Dataset 2 below. \n",
     "\n",
