Clean up and format notebook

--- a/COPD-Death-Rate.ipynb
+++ b/COPD-Death-Rate.ipynb
@@ -14,11 +14,17 @@
     "tags": []
    },
    "source": [
+    "## Introduction\n",
+    "\n",
     "This is a notebook concerning the crude and age-standardised death rate for chronic obstructive pulmonary disease (COPD) in both the United States and Uganda in 2019.\n",
+    "\n",
+    "Chronic obstructive pulmonary disease (COPD), according to the NHS, is the name for a group of lung conditions that cause breathing difficulties, including     emphysema (damage to the air sacs in the lungs), and chronic bronchitis (long-term inflammation of the airways).\n",
     "\n",
     "In this calculation, I've used the population from July 2019, as to best represent the average population of each country in 2019, rather than taking the population in January 2019 or 2020. For age-standardisation, I've used the WHO World Standard, as outlined in Dataset 2 below. \n",
     "\n",
     "To calculate the crude death rate, I have multiplied the percentage population of each age group by its respective death rate and summed the answers for both the USA and Uganda data. To calculate the age-standardised death rates, I did the same, but instead using the WHO World Standard population percentages rather than using their actual population.\n",
+    "\n",
+    "## Results\n",
     "\n",
     "In our results, we found that the USA had a much higher crude death rate than Uganda:\n",
     "* USA: 57.2\n",
@@ -32,7 +38,7 @@
     "\n",
     "As we expected, the age-standardised death rates are much closer than the crude death rate. We see that, in fact, the death rates are fairly close between the two countries, when age is less of a factor.\n",
     "\n",
-    "Data Sources:\n",
+    "## Data Sources\n",
     "\n",
     "1. UN World Population Prospects (2022) — Population Estimates 1950-2021 (obtained from https://population.un.org/wpp/Download/Standard/CSV/, Population on 01 July, by 5-year age groups.)\n",
     "2. WHO Standard Population — Table 1 in 'Ahmad OB, Boschi-Pinto C, Lopez AD, Murray CJ, Lozano R, Inoue M (2001). Age standardization of rates: a new WHO standard.' (obtained from https://cdn.who.int/media/docs/default-source/gho-documents/global-health-estimates/gpe_discussion_paper_series_paper31_2001_age_standardization_rates.pdf)\n",
@@ -53,6 +59,8 @@
     "tags": []
    },
    "source": [
+    "## Loading Data\n",
+    "\n",
     "Firstly, let's load our data and see what we're working with."
    ]
   },
@@ -80,21 +88,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/our-world-in-data-datasets/WHO Standard Population Age Standardization.csv\n",
-      "/kaggle/input/our-world-in-data-datasets/Age Specific Death Rates of COPD.csv\n",
-      "/kaggle/input/our-world-in-data-datasets/WPP2022_PopulationBySingleAgeSex_Medium_1950-2021.csv\n",
-      "/kaggle/input/our-world-in-data-datasets/WPP2022_PopulationByAge5GroupSex_Medium/WPP2022_PopulationByAge5GroupSex_Medium.csv\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_18/457201035.py:9: DtypeWarning: Columns (2,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  dfPopulation = pd.read_csv('/kaggle/input/our-world-in-data-datasets/WPP2022_PopulationByAge5GroupSex_Medium/WPP2022_PopulationByAge5GroupSex_Medium.csv')\n"
+      "C:\\Users\\Jacob\\AppData\\Local\\Temp\\ipykernel_15860\\2889870064.py:4: DtypeWarning: Columns (2,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfPopulation = pd.read_csv('WPP2022_PopulationByAge5GroupSex_Medium.csv')\n"
      ]
     },
     {
@@ -149,15 +147,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
     "        \n",
-    "dfPopulation = pd.read_csv('/kaggle/input/our-world-in-data-datasets/WPP2022_PopulationByAge5GroupSex_Medium/WPP2022_PopulationByAge5GroupSex_Medium.csv')\n",
-    "dfAgeStandard = pd.read_csv('/kaggle/input/our-world-in-data-datasets/WHO Standard Population Age Standardization.csv')\n",
-    "dfAgeDeath = pd.read_csv('/kaggle/input/our-world-in-data-datasets/Age Specific Death Rates of COPD.csv')\n",
+    "dfPopulation = pd.read_csv('WPP2022_PopulationByAge5GroupSex_Medium.csv')\n",
+    "dfAgeStandard = pd.read_csv('WHO Standard Population Age Standardization.csv')\n",
+    "dfAgeDeath = pd.read_csv('Age Specific Death Rates of COPD.csv')\n",
     "\n",
     "print('Dataset 1: UN World Population Prospects (2022) — Population Estimates 1950-2021')\n",
     "print(dfPopulation.head())\n",
@@ -181,6 +174,8 @@
     "tags": []
    },
    "source": [
+    "# Data Cleanup\n",
+    "\n",
     "We've got a lot of data in Dataset 1 so we need to clean it up to only the data we need. Our death rate data is from 2019 so we only need population data from 2019. The population data also includes up to ages 100+ whereas our other data only includes up to 85+, let's correct this. Finally we add a percentage of each population to aid in calculation."
    ]
   },
@@ -256,7 +251,7 @@
     "# only data from 2019\n",
     "dfPopulation = dfPopulation[dfPopulation.Time == 2019]\n",
     "\n",
-    "# split into USA and Uganda population data\n",
+    "# split dfPopulation into USA and Uganda population data\n",
     "important_columns = ['AgeGrp', 'PopTotal']\n",
     "dfPopUSA = dfPopulation[dfPopulation.Location == 'United States of America'][important_columns].reset_index(drop=True)\n",
     "dfPopUganda = dfPopulation[dfPopulation.Location == 'Uganda'][important_columns].reset_index(drop=True)\n",
@@ -292,7 +287,11 @@
     "tags": []
    },
    "source": [
+    "## Calculation\n",
+    "\n",
     "Now we can start our calculation for crude and age-standardised death rates.\n",
+    "\n",
+    "### Crude Death Rates\n",
     "\n",
     "Crude death rates are calculated by just using the population of the country to produce the average. This is great in principle, but can be skewed by some factors (eg. young adults are in general more likely to survive a disease.)"
    ]
@@ -359,6 +358,8 @@
     "* Uganda: 5.8\n",
     "\n",
     "As you can see, the crude death rate of COPD in Uganda is much lower than that in the USA. There could be many reasons for this, but notice that, compared to the USA, Uganda's population skews much more to a younger population. We can see that even though Uganda has a higher death rate for most age groups compared to the USA, the death rate in older people is much higher, meaning the USA ends up with a higher crude death rate.\n",
+    "\n",
+    "### Age-Standardised Death Rate\n",
     "\n",
     "Now let's compare this to the age-standardised death rate. This is where we use the same proportion of each age group on each country, rather than relying on the country population. Since Uganda's death rate is higher than the USA in most age groups, we expect the age-standardised rate to be higher.\n",
     "\n",
@@ -428,8 +429,9 @@
     "* USA: 28.4\n",
     "* Uganda: 28.7\n",
     "\n",
+    "This is mostly as we expected. The USA's population skews more towards an older population than the WHO World Standard, so has decreased, and the Uganda population skews more towards a younger population, so has increased.\n",
     "\n",
-    "This is mostly as we expected. The USA's population skews more towards an older population than the WHO World Standard, so has decreased, and the Uganda population skews more towards a younger population, so has increased."
+    "It's interesting that the age-standardised death rates are actually similar - this seems to imply that two people of similar age are about as likely to die from COPD both in the USA and Uganda. You wouldn't get this from the crude death rates - a lot more COPD deaths happen in the USA, but seemingly mostly because there is a larger proportion of older people (who are more likely to die from COPD)."
    ]
   }
  ],
@@ -464,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.8.6"
   },
   "papermill": {
    "default_parameters": {},
